fixed price card spacing

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -32,7 +32,8 @@ h3 {
   margin: 1em auto;
 }
 
-ul + p {
+ul + span {
+    display: inline-block;
     margin-top: 1em;
 }
 
